- Added /allowguns - allows guns on certain maps
- Added /agree - new guests have to agree to the rules
- Added option in the properties to allow or disallow players to teleport to people with higher ranks
- Added /slap <map> - slaps everyone of a lower rank than you in a map
- Added /p2p - teleports a player to another player
- Added adminchat - chat with admins (customisable rank via properties), use '~' pre-message to send it to adminchat
- Changed /Newlvl - Shows valid mapsizes on the help
- Admins can join silently
- Fixed /perbuild and /pervistit

v4.7.0.0
- Added new game: Countdown
-Added /splace - Measures a set [distance] and places a stone block at each end. Made by Woldoc, originally named /set.
-Added /chain - Inspired by the StormCom command of the same name, /chain sends a "chain" of brown mushrooms. Upon coming into contact with a block other than air or a level's side wall, it will pull that block back to the start of the chain. 
- Added color code information to /help.
- Fixed issue where Player.cs doesn't check for all private network IPs starting with 172 (GitHub issue #2)
- Hopefully fixed issue where certain color codes could sometimes crash the client (GitHub issue #21)
- Updater should no longer crash when updating (Github issue #3)
- /zz no longer shows an error when using "/zz blockname" (Github issue #7)
- Player, Level, and Server now use an ExtrasCollection member named "Extras" to help manage extra data needed by custom commands
- Custom $ replacements are now possible via file text/custom$s.txt
- Fixed /fixgrass light not converting shaded grass to dirt.
- Fixed an issue in CmdLoad.cs where it would constantly get stuck on corrupted levels
- Removed unused files from the source code repository
- Increased MCForge heartbeat delay to reduce website load
- Removed buggy block permissions from block.properties (flagbase and odoor_airs)
- Fixed an issue with /title where you could use a color code to title yourself [Dev].